--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,15 +19,17 @@
    min-height: 150px;
    background-color: rgb(253, 150, 150);
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+   border-radius: 8px;
 }
 
 .clock-delemeter {
-   margin: 0 10px;
+   margin: 0 5px;
    display: flex;
    .hour,
    .minute,
    .second,
-   .seperator {
+   .seperator,
+   .time-format {
       font-size: 30px;
       line-height: 40px;
       color: #fff;
