--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,11 +1,4 @@
-/* Table of Content
-====================
-
-1. typography
-2. Global styles
-
-====================*/
-
+// Import files
 @import "variable";
 @import "mixin";
 
